--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
   <script src="jsvm.js"></script>
+  <script>
+    javascript:(function () {     var script =  document.createElement('script');    script.src="//cdn.jsdelivr.net/npm/eruda";     document.body.appendChild(script);    script.onload = function () {         eruda.init()     } })();
+  </script>
   <vm-instance class="center" cd-rom="cdrom/android-x86-1.6-r2.iso"></vm-instance>
 </body>
 </html>
